fix: make filter section usable
The elements were overlapping and too small.

--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,6 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
   background-color: #3397DB;
   align-items: center;
 }
@@ -116,6 +115,7 @@ nav h1 a {
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
+  padding: 20px;
 }
 .filter-options select {
   background-color: white;
@@ -124,9 +124,11 @@ nav h1 a {
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
-  margin: 10px;
+  margin: 40px;
   padding: 0 10px;
   width: 200px;
+  min-height: 48px;
+  min-width: 48px;
 }
 
 /* ====================== Restaurant Listing ====================== */
